# jplc

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
.github/workflows/: compile.yml
ast_node/: ast_node.cpp  ast_node.hpp  ast_node.tests.cpp  cp_value.cpp  cp_value.hpp  tc_edge.cpp  tc_edge.hpp
call_signature/: call_signature.cpp  call_signature.hpp
examples/: blur.jpl  circle.jpl  invert.jpl  red.jpl  sepia.jpl  subtract.jpl
file/: file.cpp  file.hpp
generator/: generator.cpp  generator.hpp
lexer/: lexer.cpp  lexer.hpp  lexer.tests.cpp
name_info/: name_info.hpp
parser/: parser.cpp  parser.hpp  parser.tests.cpp
resolved_type/: resolved_type.cpp  resolved_type.hpp
stack_info/: stack_info.cpp  stack_info.hpp
symbol_table/: symbol_table.cpp  symbol_table.hpp
tests/: tests.cpp  tests.hpp
token/: token.hpp
type_checker/: type_checker.cpp  type_checker.hpp
visitor/: const_prop_visitor.cpp  const_prop_visitor.hpp  tensor_contraction_visitor.cpp  tensor_contraction_visitor.hpp  visitor.cpp  visitor.hpp
